[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/game_over/Article.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Fonts/will_grace/WILLG___.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://src/game_over/game_over.gd" type="Script" id=3]
[ext_resource path="res://assets/Fonts/accidental-presidency/AccidentalPresidency.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://exmaple.png" type="Texture" id=5]
[ext_resource path="res://src/game_over/level_details.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.917647, 0.901961, 0.878431, 1 )
border_width_left = 80
border_width_right = 10
border_color = Color( 0.129412, 0.137255, 0.0980392, 1 )
corner_radius_top_right = 10
corner_radius_bottom_right = 10
shadow_color = Color( 0.0823529, 0.0666667, 0.0666667, 0.6 )

[sub_resource type="Theme" id=7]

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.643137, 0.145098, 0.145098, 1 )
border_width_left = 4
border_width_right = 4
border_color = Color( 0.145098, 0.145098, 0.403922, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=9]
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 100
outline_color = Color( 0.0235294, 0.0196078, 0.0196078, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=15]
size = 25
use_mipmaps = true
use_filter = true
extra_spacing_space = 1
font_data = ExtResource( 4 )

[node name="GameOver" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = 7.0
margin_bottom = 5.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 931.0
margin_bottom = 505.0
custom_styles/panel = SubResource( 6 )

[node name="BgFoot" type="Line2D" parent="MarginContainer/Panel"]
position = Vector2( 110.542, 419.575 )
scale = Vector2( 0.952797, 10.225 )
points = PoolVector2Array( 833, 3, -5, 3 )
default_color = Color( 0.72549, 0.713726, 0.686275, 1 )

[node name="Container" type="VBoxContainer" parent="MarginContainer/Panel"]
margin_left = 78.0
margin_top = 30.0
margin_right = 901.0
margin_bottom = 500.0
theme = SubResource( 7 )
custom_constants/separation = 10

[node name="UnderlineTitle" type="Line2D" parent="MarginContainer/Panel/Container"]
position = Vector2( 335.75, 0 )
scale = Vector2( 8.21796, 1.13075 )
points = PoolVector2Array( -15.8639, 96, 62.1538, 96 )
default_color = Color( 0, 0, 0, 1 )

[node name="Header" type="HBoxContainer" parent="MarginContainer/Panel/Container"]
margin_right = 839.0
margin_bottom = 118.0
alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer/Panel/Container/Header"]
margin_right = 225.0
margin_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 225, 100 )
custom_styles/panel = SubResource( 16 )

[node name="UnderlineTitle2" type="Line2D" parent="MarginContainer/Panel/Container/Header/Panel"]
position = Vector2( 17, -1068.75 )
scale = Vector2( 0.383079, 11.75 )
points = PoolVector2Array( -15.8639, 96, 62.1538, 96 )
default_color = Color( 0.145098, 0.145098, 0.403922, 1 )

[node name="NewsName" type="Label" parent="MarginContainer/Panel/Container/Header/Panel"]
margin_left = 50.0
margin_right = 200.0
margin_bottom = 118.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 9 )
text = "News
Name"
uppercase = true

[node name="GameOver" type="Label" parent="MarginContainer/Panel/Container/Header"]
margin_left = 229.0
margin_right = 839.0
margin_bottom = 118.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = " Game over"
uppercase = true

[node name="Body" type="HBoxContainer" parent="MarginContainer/Panel/Container"]
margin_top = 128.0
margin_right = 839.0
margin_bottom = 353.0
rect_min_size = Vector2( 500, 220 )

[node name="Image" type="TextureRect" parent="MarginContainer/Panel/Container/Body"]
margin_left = 10.0
margin_right = 500.0
margin_bottom = 225.0
grow_horizontal = 0
rect_min_size = Vector2( 500, 225 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="Article" parent="MarginContainer/Panel/Container/Body" instance=ExtResource( 1 )]
margin_bottom = 225.0

[node name="Foot" type="VBoxContainer" parent="MarginContainer/Panel/Container"]
margin_top = 363.0
margin_right = 839.0
margin_bottom = 414.0
custom_constants/separation = 15
alignment = 1

[node name="Points" type="HBoxContainer" parent="MarginContainer/Panel/Container/Foot"]
margin_right = 839.0
custom_constants/separation = 60
alignment = 1
script = ExtResource( 7 )

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/Panel/Container/Foot"]
margin_top = 15.0
margin_right = 839.0
margin_bottom = 51.0
custom_constants/separation = 40
alignment = 1

[node name="Credits" type="Button" parent="MarginContainer/Panel/Container/Foot/Buttons"]
margin_left = 278.0
margin_right = 350.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 15 )
text = "CREDITS"

[node name="Try Again" type="Button" parent="MarginContainer/Panel/Container/Foot/Buttons"]
margin_left = 390.0
margin_right = 476.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 15 )
text = "TRY AGAIN"

[node name="Quit" type="Button" parent="MarginContainer/Panel/Container/Foot/Buttons"]
margin_left = 516.0
margin_right = 561.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 15 )
text = "QUIT"

[connection signal="button_down" from="MarginContainer/Panel/Container/Foot/Buttons/Credits" to="." method="_on_Credits_button_down"]
[connection signal="button_down" from="MarginContainer/Panel/Container/Foot/Buttons/Try Again" to="." method="_on_Try_Again_button_down"]
[connection signal="button_down" from="MarginContainer/Panel/Container/Foot/Buttons/Quit" to="." method="_on_Quit_button_down"]
